added chat endpoints and stuff
