# api/swagger.json
@@ -17,9 +17,13 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/v1/chat": {
+        "/chat": {
             "get": {
+                "description": "Retrieves a list of all chat rooms with pagination",
                 "consumes": [
+                    "application/json"
+                ],
+                "produces": [
                     "application/json"
                 ],
                 "tags": [
@@ -30,14 +34,14 @@
                     {
                         "type": "integer",
                         "default": 1,
-                        "description": "page",
+                        "description": "Page number for pagination",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 10,
-                        "description": "limit",
+                        "description": "Number of items per page for pagination",
                         "name": "limit",
                         "in": "query"
                     }
@@ -48,6 +52,136 @@
                         "schema": {
                             "$ref": "#/definitions/schemas.PaginationSchema-models_Chat"
                         }
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a new chat room with the provided information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chats"
+                ],
+                "summary": "Create chat room",
+                "parameters": [
+                    {
+                        "description": "Chat Room Information",
+                        "name": "chat",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Chat"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Chat"
+                        }
+                    }
+                }
+            }
+        },
+        "/chat/{id}": {
+            "get": {
+                "description": "Retrieves details of a specific chat room by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chats"
+                ],
+                "summary": "Get chat room details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Chat Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Chat"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Updates an existing chat room's details by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chats"
+                ],
+                "summary": "Update chat room",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Chat Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated Chat Room Information",
+                        "name": "chat",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Chat"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Chat"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes a chat room by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chats"
+                ],
+                "summary": "Delete chat room",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Chat Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     }
                 }
             }
@@ -132,7 +266,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WebSocket"
+                    "websocket"
                 ],
                 "summary": "WebSocket Chat Endpoint",
                 "responses": {
